Fixed CSS for mobile devices causing horizontal scrolling due to navbar padding.

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -99,6 +99,7 @@
   .nav {
     margin: 0;
     border-radius: 0;
+    padding: 0 1.5rem;
   }
   .nav .nav-cta {
     display: none;
